--- a/docs/estilos.css
+++ b/docs/estilos.css
@@ -3,11 +3,12 @@ body{
 }
 
 .titulo{
-    background-color: #000000;
+    background-color: #3d3d3d;
     margin: 0px;
     padding: 0px;
-    height: 60px;
+    height: 55px;
     width: 100%;
+    display: flex;
 }
 
 .contenedor{
@@ -15,4 +16,57 @@ body{
     height: 600px;
     width: 1300px;
     align-content: center
+}
+.categoria{
+    height: 40px;
+    background-color: #3d3d3d;
+    color: #FFFFFF;
+    margin: 7px 5px 0px 40px;
+}
+.nombre{
+    height: 40px;
+    background-color: #3d3d3d;
+    color: #FFFFFF;
+    margin: 7px 5px 0px 5px;
+}
+.busquedas{
+    height: 39px;
+    margin: 8px 0px 0px 5px;
+    width: 700px;
+    border: none;
+}
+.lupa{
+    background-image: url(https://previews.123rf.com/images/angelp/angelp1612/angelp161200434/69735113-icono-de-lupa-fondo-naranja-con-negro-ilustraci%C3%B3n-vectorial.jpg);
+    background-size: contain;
+    background-repeat:no-repeat;
+    height:39px;
+    width:40px;
+    background-position: center;
+    margin: 8px 5px 0px 0px;
+    border: none;
+}
+.envio{
+    height:40px;
+    width:40px;
+    margin: 7px 5px 0px 5px;
+    background-image: url(https://us.123rf.com/450wm/mallinka/mallinka1406/mallinka140600029/29413333-env%C3%ADo-cami%C3%B3n-silueta-en-el-bot%C3%B3n-negro.jpg?ver=6);
+    background-size: contain;
+}
+.sesion{
+    height:40px;
+    width:40px;
+    margin: 7px 5px 0px 5px;
+}
+.pedidos{
+    height:40px;
+    width:40px;
+    margin: 7px 5px 0px 5px;
+}
+.opciones{
+    height: 30px;
+    background-color: #f2f2f2;
+}
+a{
+    text-decoration: none;
+    margin: 0px 10px 0px 10px;
 }
